# xgboost-poc

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: example_classify.yaml
runs/2025-08-25_10-03-55/tuning/: tuning_results.csv
scripts/: 01_intuition_boosting.py  02_xgb_basic_classification.py  03_xgb_explainability_shap.py  04_xgb_regularization_tuning.py  05_xgb_advanced_topics.py  fetch_data.py  make_synthetic.py
src/: cli.py  data.py  explain.py  plotting.py  utils.py
src/xgboost_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py
